syntax = "proto3";

option java_multiple_files = true;
option java_generic_services = true;

package com.github.vkremianskii.pits.communicator.grpc;

message PositionChanged {
  int32 equipment_id = 1;
  double latitude = 2;
  double longitude = 3;
  int32 elevation = 4;
};

message PositionChangedResponse {
};

message PayloadChanged {
  int32 equipment_id = 1;
  int32 payload = 2;
};

message PayloadChangedResponse {
};

service EquipmentService {
  rpc positionChanged(PositionChanged) returns (PositionChangedResponse);
  rpc payloadChanged(PayloadChanged) returns (PayloadChangedResponse);
};
